<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.ambientbytes.ocoldemo.ViewFactories" />
        <variable name="vm" type="com.ambientbytes.ocoldemo.viewmodels.MainViewModel"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/buttons_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->vm.addYoungRobot()}"
                android:text="@string/add_young_robot_button_text" />

            <Button
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->vm.addOldRobot()}"
                android:text="@string/add_old_robot_button_text" />

            <Button
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->vm.addYoungHuman()}"
                android:text="@string/add_young_human_button_text" />

            <Button
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->vm.addOldHuman()}"
                android:text="@string/add_old_human_button_text" />

            <Button
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->vm.clearRobots()}"
                android:text="@string/clear_robots_button_text" />

            <Button
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->vm.clearHumans()}"
                android:text="@string/clear_humans_button_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="fill_vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Everybody"
                    android:layout_gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                <android.support.v7.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:itemsSource="@{vm.data}"
                    app:viewFactory="@{ViewFactories.getMainViewFactory()}">
                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Young Robots"
                    android:layout_gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                <android.support.v7.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:itemsSource="@{vm.youngRobots}"
                    app:viewFactory="@{ViewFactories.getMainViewFactory()}">
                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Old Humans"
                    android:layout_gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                <android.support.v7.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:itemsSource="@{vm.oldHumans}"
                    app:viewFactory="@{ViewFactories.getMainViewFactory()}">
                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don Pedro"/>
        </LinearLayout>

    </LinearLayout>

</layout>
